k8s/test/backend.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: backend-config
  namespace: keyofhistory-test
data:
  SPRING_PROFILES_ACTIVE: "prod"
  DB_HOST: "postgres"
  DB_PORT: "5432"
  DB_NAME: "keyofhistory"
  DB_USER: "postgres"
  REDIS_HOST: "redis"
  REDIS_PORT: "6379"
  RABBITMQ_HOST: "rabbitmq"
  RABBITMQ_PORT: "5672"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: keyofhistory-test
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          # Using local docker daemon image name directly for Docker Desktop K8s compatibility
          image: keyofhistory-backend:latest #burası dockerfile'da oluşturulan imaj isminin aynısı olmalı
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          envFrom:
            - configMapRef:
                name: backend-config
          env:
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: postgres-password
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: keyofhistory-test
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: backend
  type: ClusterIP
