k8s/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keyofhistory-ingress
  namespace: keyofhistory-test
spec:
  ingressClassName: nginx
  rules:
    - host: keyofhistory.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
